welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:6: error: '{' expected but 'case' found.
		case "R"=>droitr();avance();
                ^BDR2:7: error: '}' expected but 'case' found.
		case "L"=>gauche();avance()
                ^BDR2:8: error: '}' expected but 'case' found.
		case "I"=>gauche();gauche();avance;
                ^BDR2:9: error: '}' expected but 'case' found.
		case "A"=>avance();
                ^BDR2:10: error: illegal start of definition
		case "B"=>avance();avance();
                ^BDR2:11: error: illegal start of definition
		case "C"=>avance();avance();avance();
                ^BDR2:12: error: illegal start of definition
		case "D"=>avance();avance();avance();avance();
                ^BDR2:13: error: illegal start of definition
		case "E"=>avance();avance();avance();avance();avance();
                ^BDR2:14: error: illegal start of definition
		case "F"=>avance();avance();avance();avance();avance();avance();
                ^BDR2:15: error: illegal start of definition
		case "Z"=>recule();
                ^BDR2:16: error: illegal start of definition
		case "Y"=>recule();recule();
                ^BDR2:17: error: illegal start of definition
		case "X"=>recule();recule();recule();
                ^BDR2:18: error: illegal start of definition
		case "W"=>recule();recule();recule();recule();
                ^BDR2:19: error: illegal start of definition
		case "V"=>recule();recule();recule();recule();recule();
                ^BDR2:20: error: illegal start of definition
		case "U"=>vrecule();recule();recule();recule();recule();recule();
                ^BDR2:21: error: ';' expected but 'else' found.
	}else{
         ^BDR2:24: error: eof expected but '}' found.
	}
        ^